[gd_scene load_steps=12 format=3 uid="uid://cml12by6pyhyc"]

[ext_resource type="Script" path="res://region_tooltip_2.gd" id="1_65wef"]
[ext_resource type="Texture2D" uid="uid://dq0mgh25tw1fo" path="res://images/modal_bg_universal.png" id="2_u85qw"]
[ext_resource type="FontFile" uid="uid://b4tchgklvshij" path="res://fonts/Cinzel.ttf" id="3_owbma"]
[ext_resource type="Texture2D" uid="uid://c30y8te4yqwy0" path="res://images/icons/population.png" id="4_pop"]
[ext_resource type="Texture2D" uid="uid://d7aaun3y8iy2" path="res://images/icons/food.png" id="5_food"]
[ext_resource type="Texture2D" uid="uid://bjkb4wlryvdl" path="res://images/icons/wood.png" id="6_wood"]
[ext_resource type="Texture2D" uid="uid://cxtxtfup5qlmi" path="res://images/icons/stone.png" id="7_stone"]
[ext_resource type="Texture2D" uid="uid://bo8ksqcmcfjgr" path="res://images/icons/iron.png" id="8_iron"]
[ext_resource type="Texture2D" uid="uid://tq0lrv702naa" path="res://images/icons/gold.png" id="9_gold"]

[sub_resource type="Theme" id="Theme_86wrq"]
default_font = ExtResource("3_owbma")
default_font_size = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b424"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_size = 5

[node name="RegionTooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_86wrq")
script = ExtResource("1_65wef")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 115.0
texture = ExtResource("2_u85qw")
expand_mode = 1
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 115.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1b424")

[node name="Army" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 7.0
offset_top = 2.0
offset_right = 233.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HeaderSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="RegionName" type="Label" parent="Panel/Army/HeaderSection"]
layout_mode = 2
text = "Shire of Hornhold"
horizontal_alignment = 1

[node name="ValuesSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Images" type="HBoxContainer" parent="Panel/Army/ValuesSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="Panel/Army/ValuesSection/Images"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PopulationIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_pop")
expand_mode = 1
stretch_mode = 5

[node name="FoodIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_food")
expand_mode = 1
stretch_mode = 5

[node name="WoodIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("6_wood")
expand_mode = 1
stretch_mode = 5

[node name="StoneIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("7_stone")
expand_mode = 1
stretch_mode = 5

[node name="IronIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("8_iron")
expand_mode = 1
stretch_mode = 5

[node name="GoldIcon" type="TextureRect" parent="Panel/Army/ValuesSection/Images"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("9_gold")
expand_mode = 1
stretch_mode = 5

[node name="Values" type="HBoxContainer" parent="Panel/Army/ValuesSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="Panel/Army/ValuesSection/Values"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PopulationValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "999"
horizontal_alignment = 1

[node name="FoodValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "99"
horizontal_alignment = 1

[node name="WoodValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "99"
horizontal_alignment = 1

[node name="StoneValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "99"
horizontal_alignment = 1

[node name="IronValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
visible = false
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "99"
horizontal_alignment = 1

[node name="GoldValue" type="Label" parent="Panel/Army/ValuesSection/Values"]
visible = false
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "99"
horizontal_alignment = 1
